--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Nora
 
-<<<<<<< HEAD
-coach: Nicholas
-=======
 coach: Melissa
->>>>>>> b427630 (Edit Leopards)
 
 members:
 - Linda
 - Willam
 - David
 - Olivia
+- Evie
